fixed the collapsing bug and changed the ui colors

--- a/_resst.scss
+++ b/_resst.scss
@@ -14,6 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #ac92a6;
 }
 
 li {
